# AuthKit

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  PRD.md  README.md  clippy.toml  deny.toml  justfile  package.json  pre-commit-config.yaml  pyproject.toml  rust-toolchain.toml
.cargo/: audit.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/codeql/: codeql-config.yml
.github/workflows/: cargo-deny.yml  ci.yml  codeql.yml  doc-links.yml  fr-coverage.yml  pages-deploy.yml  quality-gate.yml  release-crates.yml  release-drafter.yml  release.yml  sast.yml  scorecard.yml  security-deep-scan.yml  security-guard.yml  trufflehog.yml
.grade-reports/: clippy.raw  grade.json
docs/: SPEC.md  index.md  packages.md  protocols.md
docs/.vitepress/: config.mts
docs/adr/: ADR-001-auth-flow.md  ADR-002-session-management.md
docs/worklogs/: README.md
kitty-specs/clarify-pr-template-placeholders/: spec.md
rust/: Cargo.toml
rust/phenotype-auth/: Cargo.toml
rust/phenotype-auth-core/: Cargo.toml  README.md  build.rs
rust/phenotype-auth-core/benches/: hot_paths.rs
rust/phenotype-auth-core/examples/: quickstart.rs
rust/phenotype-auth-core/src/: error.rs  health.rs  lib.rs  password.rs  role.rs  session.rs  token.rs  user.rs
rust/phenotype-auth-core/tests/: integration.rs  integration_smoke.rs  property_tests.rs
rust/phenotype-authvault-adapters/: Cargo.toml  README.md
rust/phenotype-authvault-adapters/src/: audit.rs  hashers.rs  kms.rs  lib.rs  refresh_token.rs  revocation.rs  storage.rs  vault_store.rs
rust/phenotype-authvault-application/: Cargo.toml  README.md
rust/phenotype-authvault-application/benches/: auth.rs  benchmarks.rs  perf.rs
rust/phenotype-authvault-application/examples/: serve.rs
rust/phenotype-authvault-application/src/: lib.rs  services.rs
rust/phenotype-authvault-domain/: Cargo.toml
rust/phenotype-authvault-domain/src/: auth.rs  errors.rs  identity.rs  lib.rs  pkce.rs  policy.rs  ports.rs  session_store.rs  signing.rs  vault.rs
rust/phenotype-cipher/: Cargo.toml
rust/phenotype-cipher/.github/workflows/: ci.yml
rust/phenotype-content-hash/: Cargo.toml
rust/phenotype-security-aggregator/src/: lib.rs
specs/requirements/: authkit-frnfr.md
src/: lib.rs  oidc.rs  totp.rs  webauthn.rs
src/adapters/: hashers.rs  storage.rs
src/application/: services.rs
src/domain/: identity.rs  mod.rs  policy.rs  session_store.rs
src/middleware/: mod.rs  pkce_state_session.rs
tests/: integration_tests.rs  test_smoke.py  unit_tests.rs
typescript/: package.json
