[package]
name = "authkit"
version = "0.1.0"
edition = "2021"
description = "AuthKit: PKCE OAuth state-to-session binding middleware (axum/tower)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/AuthKit"
rust-version = "1.75"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
axum = "0.7"
tower = "0.5"
tokio = { version = "1.0", features = ["full"] }
subtle = "2.6"
percent-encoding = "2.3"
tracing = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
