[workspace]
resolver = "2"
members = [
    "phenotype-auth-core",
    "phenotype-content-hash",
    "phenotype-contracts",
    "phenotype-security-aggregator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Phenotype Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/AuthKit"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = "warn"
unused_must_use = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Domain-modeling lints that fight real code.
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
if_not_else = "allow"
default_trait_access = "allow"
needless_pass_by_value = "allow"
redundant_closure_for_method_calls = "allow"
unused_async = "allow"
option_if_let_else = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
getrandom = { version = "0.2", features = ["std"] }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
