[package]
name = "phenotype-auth-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Canonical auth domain model for the Phenotype ecosystem (User, UserId, Role, Permission, Session, Token, AuthError, health). Migrated from phenoShared's auth-core (V20 AUTH cluster consolidation)."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }
getrandom = { workspace = true, features = ["std"] }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "hot_paths"
harness = false

[[example]]
name = "quickstart"
path = "examples/quickstart.rs"
