[package]
name = "phenotype-authvault-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Outbound port adapters for the Authvault auth domain (V20 step 4/5)"
publish = false

[dependencies]
phenotype-authvault-domain = { path = "../phenotype-authvault-domain" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "fs", "macros", "rt", "rt-multi-thread"] }
thiserror = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
bcrypt = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
