[package]
name = "phenotype-authvault-application"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Authvault application layer (AuthService) — V20 AUTH cluster step 3/5"
readme = "README.md"

[lints]
workspace = true

[dependencies]
phenotype-authvault-domain = { path = "../phenotype-authvault-domain" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
