[package]
name = "phenotype-authvault-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Authvault domain layer (pure auth domain logic migrated from Authvault/ into AuthKit's workspace, V20 AUTH cluster step 2/5)."

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
chacha20poly1305 = { workspace = true }
zeroize = { workspace = true }
regex = { workspace = true }
